# mesh_navigation

./: .gitignore  .gitmodules  LICENSE  README.md  source_dependencies.yaml
.github/: CODEOWNERS
.github/workflows/: humble.yaml  jazzy.yaml  main.yml  melodic.yml  noetic.yml
ci/: Dockerfile-melodic  Dockerfile-noetic  docker_entrypoint.sh
cvp_mesh_planner/: CHANGELOG.rst  CMakeLists.txt  cvp_mesh_planner.xml  package.xml
cvp_mesh_planner/cfg/: CVPMeshPlanner.cfg
cvp_mesh_planner/include/cvp_mesh_planner/: cvp_mesh_planner.h
cvp_mesh_planner/src/: cvp_mesh_planner.cpp
dijkstra_mesh_planner/: CHANGELOG.rst  CMakeLists.txt  dijkstra_mesh_planner.xml  package.xml
dijkstra_mesh_planner/cfg/: DijkstraMeshPlanner.cfg
dijkstra_mesh_planner/include/dijkstra_mesh_planner/: dijkstra_mesh_planner.h
dijkstra_mesh_planner/src/: dijkstra_mesh_planner.cpp
mbf_mesh_core/: CHANGELOG.rst  CMakeLists.txt  package.xml
mbf_mesh_core/include/mbf_mesh_core/: mesh_controller.h  mesh_planner.h  mesh_recovery.h
mbf_mesh_nav/: CHANGELOG.rst  CMakeLists.txt  package.xml
mbf_mesh_nav/cfg/: MoveBaseFlex.cfg
mbf_mesh_nav/include/mbf_mesh_nav/: mesh_controller_execution.h  mesh_navigation_server.h  mesh_planner_execution.h  mesh_recovery_execution.h
mbf_mesh_nav/src/: mbf_mesh_nav.cpp  mesh_controller_execution.cpp  mesh_navigation_server.cpp  mesh_planner_execution.cpp  mesh_recovery_execution.cpp  mesp_recovery_execution.cpp
mesh_client/: CHANGELOG.rst  CMakeLists.txt  package.xml
mesh_client/include/mesh_client/: mesh_client.h
mesh_client/src/: mesh_client.cpp
mesh_controller/: CHANGELOG.rst  CMakeLists.txt  mesh_controller.xml  package.xml
mesh_controller/cfg/: MeshController.cfg
mesh_controller/include/mesh_controller/: mesh_controller.h
mesh_controller/src/: mesh_controller.cpp
mesh_layers/: CHANGELOG.rst  CMakeLists.txt  mesh_layers.xml  package.xml
mesh_layers/cfg/: HeightDiffLayer.cfg  InflationLayer.cfg  RidgeLayer.cfg  RoughnessLayer.cfg  SteepnessLayer.cfg
mesh_layers/include/mesh_layers/: border_layer.h  clearance_layer.h  combination_layer.h  dynamic_inflation_layer.h  freespace_layer.h  height_diff_layer.h  inflation_layer.h  obstacle_layer.h  ridge_layer.h  roughness_layer.h  steepness_layer.h
mesh_layers/src/: border_layer.cpp  clearance_layer.cpp  combination_layer.cpp  dynamic_inflation_layer.cpp  freespace_layer.cpp  height_diff_layer.cpp  inflation_layer.cpp  obstacle_layer.cpp  ridge_layer.cpp  roughness_layer.cpp  steepness_layer.cpp
mesh_layers/test/: inflation_layer_test.cpp
mesh_map/: CHANGELOG.rst  CMakeLists.txt  package.xml
mesh_map/cfg/: MeshMap.cfg
mesh_map/include/mesh_map/: abstract_layer.h  definitions.h  height_diff_layer.h  inflation_layer.h  layer_manager.h  live_mesh_map.h  mesh_map.h  nanoflann.hpp  nanoflann_mesh_adaptor.h  roughness_layer.h  timer.h  util.h
mesh_map/src/: abstract_layer.cpp  height_diff_layer.cpp  inflation_layer.cpp  layer_manager.cpp  live_mesh_map.cpp  mesh_map.cpp  roughness_layer.cpp  timer.cpp  util.cpp
mesh_map/test/: layer_plugin.cpp  layer_plugin.xml  mesh_map_test.cpp
mesh_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
mesh_planner/: CMakeLists.txt  mesh_planner.xml  package.xml
mesh_planner/cfg/: MeshPlanner.cfg
mesh_planner/include/mesh_planner/: fast_marching.h  mesh_planner.h
mesh_planner/src/: fast_marching.cpp  mesh_planner.cpp
mmp_planner/: CMakeLists.txt  mmp_planner.xml  package.xml
mmp_planner/cfg/: MMPPlanner.cfg
mmp_planner/include/mmp_planner/: mmp_planner.h
mmp_planner/src/: mmp_planner.cpp
wave_front_planner/: CHANGELOG.rst  CMakeLists.txt  package.xml  wave_front_planner.xml
wave_front_planner/cfg/: WaveFrontPlanner.cfg
wave_front_planner/include/wave_front_planner/: wave_front_planner.h
wave_front_planner/src/: wave_front_planner.cpp
