<?xml version="1.0"?>
<package format="2">
    <name>cvp_mesh_planner</name>
    <version>1.0.0</version>
    <description>The Continuous Vector Field Planner (CVP) mesh planner package</description>
    <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
    <license>BSD 3-Clause</license>
    <author email="spuetz@uos.de">Sebastian Pütz</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>mbf_mesh_core</depend>
    <depend>mbf_utility</depend>
    <depend>mbf_msgs</depend>
    <depend>mesh_map</depend>
    <depend>dynamic_reconfigure</depend>

    <export>
        <mbf_mesh_core plugin="${prefix}/cvp_mesh_planner.xml"/>
    </export>
</package>
