<?xml version="1.0"?>
<package format="3">
    <name>cvp_mesh_planner</name>
    <version>3.0.1</version>
    <description>The Continuous Vector Field Planner (CVP) mesh planner package</description>
    <maintainer email="alexander.mock@naturerobots.com">Alexander Mock</maintainer>
    <maintainer email="jubraun@uos.de">Justus Braun</maintainer>
    <license>BSD-3-Clause</license>
    <author email="spuetz@uos.de">Sebastian Pütz</author>
    <author email="alexander.mock@naturerobots.com">Alexander Mock</author>
    <author email="jubraun@uos.de">Justus Braun</author>

    <depend>rclcpp</depend>
    <depend>mbf_mesh_core</depend>
    <depend>mbf_utility</depend>
    <depend>mbf_msgs</depend>
    <depend>mesh_map</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
