<?xml version="1.0"?>
<package format="2">
    <name>dijkstra_mesh_planner</name>
    <version>1.0.0</version>
    <description>The dijkstra_mesh_planner package</description>
    <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
    <license>BSD-3</license>
    <author email="spuetz@uos.de">Sebastian Pütz</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>mbf_mesh_core</depend>
    <depend>mbf_utility</depend>
    <depend>mesh_map</depend>

    <export>
        <mbf_mesh_core plugin="${prefix}/dijkstra_mesh_planner.xml"/>
    </export>
</package>
