<?xml version="1.0"?>
<package format="3">
    <name>dijkstra_mesh_planner</name>
    <version>2.0.0</version>
    <description>The dijkstra_mesh_planner package</description>
    <maintainer email="matthias.holoch@naturerobots.com">Matthias Holoch</maintainer>
    <maintainer email="sebastian.puetz@naturerobots.com">Sebastian Pütz</maintainer>
    <license>BSD-3</license>
    <author email="spuetz@uos.de">Sebastian Pütz</author>

    <depend>rclcpp</depend>
    <depend>mbf_mesh_core</depend>
    <depend>mbf_utility</depend>
    <depend>mbf_msgs</depend>
    <depend>mesh_map</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
