<?xml version="1.0"?>
<package format="2">
    <name>mbf_mesh_core</name>
    <version>1.0.1</version>
    <description>The mbf_mesh_core package</description>

    <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>

    <license>BSD-3</license>
    <author email="spuetz@uos.de">Sebastian Pütz</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>mbf_abstract_core</depend>
    <depend>mesh_map</depend>

</package>
