<?xml version="1.0"?>
<package format="3">
    <name>mbf_mesh_core</name>
    <version>2.0.1</version>
    <description>The mbf_mesh_core package</description>

    <maintainer email="matthias.holoch@naturerobots.com">Matthias Holoch</maintainer>
    <maintainer email="sebastian.puetz@naturerobots.com">Sebastian Pütz</maintainer>

    <license>BSD-3</license>
    <author email="spuetz@uos.de">Sebastian Pütz</author>

    <depend>mbf_abstract_core</depend>
    <depend>mesh_map</depend>

    <export>
      <build_type>ament_cmake</build_type>
    </export>
</package>
