<?xml version="1.0"?>
<package format="3">
    <name>mbf_mesh_nav</name>
    <version>1.0.1</version>
    <description>The mbf_mesh_nav package</description>

    <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>

    <license>BSD-3</license>
    <author email="spuetz@uos.de">Sebastian Pütz</author>

    <depend>roscpp</depend>
    <depend>mbf_abstract_nav</depend>
    <depend>mbf_mesh_core</depend>
    <depend>mesh_map</depend>
    <depend>pluginlib</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
