<?xml version="1.0"?>
<package format="3">
    <name>mbf_mesh_nav</name>
    <version>2.0.0</version>
    <description>The mbf_mesh_nav package</description>

    <maintainer email="matthias.holoch@naturerobots.com">Matthias Holoch</maintainer>
    <maintainer email="sebastian.puetz@naturerobots.com">Sebastian Pütz</maintainer>

    <license>BSD-3</license>
    <author email="spuetz@uos.de">Sebastian Pütz</author>

    <depend>geometry_msgs</depend>
    <depend>mbf_abstract_nav</depend>
    <depend>mbf_simple_core</depend>
    <depend>mbf_mesh_core</depend>
    <depend>mbf_msgs</depend>
    <depend>mesh_map</depend>
    <depend>nav_msgs</depend>
    <depend>pluginlib</depend>
    <depend>rclcpp</depend>
    <depend>std_srvs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
