<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>mbf_mesh_nav</name>
    <version>3.0.1</version>
    <description>The mbf_mesh_nav package</description>

    <maintainer email="alexander.mock@naturerobots.com">Alexander Mock</maintainer>
    <maintainer email="jubraun@uos.de">Justus Braun</maintainer>
    <license>BSD-3-Clause</license>
    
    <author email="spuetz@uos.de">Sebastian Pütz</author>
    <author email="alexander.mock@naturerobots.com">Alexander Mock</author>

    <depend>geometry_msgs</depend>
    <depend>mbf_abstract_nav</depend>
    <depend>mbf_simple_core</depend>
    <depend>mbf_mesh_core</depend>
    <depend>mbf_msgs</depend>
    <depend>mesh_map</depend>
    <depend>nav_msgs</depend>
    <depend>pluginlib</depend>
    <depend>rclcpp</depend>
    <depend>std_srvs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
