<?xml version="1.0"?>
<package format="2">
  <name>mesh_client</name>
  <version>0.1.0</version>
  <description>The mesh_client package</description>

  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <license>BSD-3</license>
  <author email="spuetz@uos.de">Sebastian Pütz</author>
  <author email="mklpiening@uos.de">Malte kl. Piening</author>

  <depend>curl</depend>
  <depend>eigen</depend>
  <depend>libjsoncpp-dev</depend>
  <depend>lvr2</depend>
  <depend>roscpp</depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
