<?xml version="1.0"?>
<package format="3">
  <name>mesh_client</name>
  <version>1.0.1</version>
  <description>The mesh_client package</description>

  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <license>BSD-3</license>
  <author email="spuetz@uos.de">Sebastian Pütz</author>
  <author email="mklpiening@uos.de">Malte kl. Piening</author>

  <build_depend>pkg-config</build_depend>
  <depend>curl</depend>
  <depend>eigen</depend>
  <depend>libjsoncpp-dev</depend>
  <depend>lvr2</depend> <!--TODO: lvr is not packaged for humble. use fork from source for now-->
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
