<?xml version="1.0"?>
<package format="2">
    <name>mesh_controller</name>
    <version>1.0.0</version>
    <description>The mesh_controller package</description>

    <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
    <license>BSD-3</license>
    <author email="spuetz@uos.de">Sebastian Pütz</author>
    <author email="sfrohn@uos.de">Sabrina Frohn</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>mbf_mesh_core</depend>
    <depend>mbf_utility</depend>
    <depend>mesh_map</depend>
    <depend>tf2_geometry_msgs</depend>

    <export>
        <mbf_mesh_core plugin="${prefix}/mesh_controller.xml"/>
    </export>
</package>
