<?xml version="1.0"?>
<package format="3">
    <name>mesh_controller</name>
    <version>1.0.1</version>
    <description>The mesh_controller package</description>

    <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
    <license>BSD-3</license>
    <author email="spuetz@uos.de">Sebastian Pütz</author>
    <author email="sfrohn@uos.de">Sabrina Frohn</author>

    <depend>mbf_mesh_core</depend>
    <depend>mbf_msgs</depend>
    <depend>mbf_utility</depend>
    <depend>mesh_map</depend>
    <depend>rclcpp</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>example_interfaces</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
