<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>mesh_controller</name>
    <version>3.0.1</version>
    <description>The mesh_controller package</description>

    <maintainer email="alexander.mock@naturerobots.com">Alexander Mock</maintainer>
    <maintainer email="jubraun@uos.de">Justus Braun</maintainer>
    
    <license>BSD-3-Clause</license>
    
    <author email="spuetz@uos.de">Sebastian Pütz</author>
    <author email="sfrohn@uos.de">Sabrina Frohn</author>
    <author email="alexander.mock@naturerobots.com">Alexander Mock</author>
    <author email="jubraun@uos.de">Justus Braun</author>

    <depend>mbf_mesh_core</depend>
    <depend>mbf_msgs</depend>
    <depend>mbf_utility</depend>
    <depend>mesh_map</depend>
    <depend>rclcpp</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>example_interfaces</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
