<?xml version="1.0"?>
<package format="3">
    <name>mesh_layers</name>
    <version>1.0.1</version>
    <description>The mesh_layers package</description>

    <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>

    <license>BSD-3</license>
    <author email="spuetz@uos.de">Sebastian Pütz</author>

    <depend>mesh_map</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
