<?xml version="1.0"?>
<package format="3">
    <name>mesh_layers</name>
    <version>2.0.0</version>
    <description>The mesh_layers package</description>

    <maintainer email="matthias.holoch@naturerobots.com">Matthias Holoch</maintainer>
    <maintainer email="sebastian.puetz@naturerobots.com">Sebastian Pütz</maintainer>

    <license>BSD-3</license>
    <author email="spuetz@uos.de">Sebastian Pütz</author>

    <depend>mesh_map</depend>
    <depend>lvr2</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
