<?xml version="1.0"?>
<package format="3">
    <name>mesh_map</name>
    <version>3.0.0</version>
    <description>The mesh_map package</description>
    <maintainer email="matthias.holoch@naturerobots.com">Matthias Holoch</maintainer>
    <maintainer email="sebastian.puetz@naturerobots.com">Sebastian Pütz</maintainer>
    <license>BSD 3-Clause</license>
    <author email="spuetz@uos.de">Sebastian Pütz</author>

    <depend>geometry_msgs</depend>
    <depend>mesh_msgs_conversions</depend> <!-- Note: mesh_msgs_conversions from mesh_tools is not packaged for humble, need to get it from source for now (mesh_tools repo) -->
    <depend>pluginlib</depend>
    <depend>rclcpp</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf2</depend>
    <depend>visualization_msgs</depend>
    <depend>std_srvs</depend>
    <depend>assimp</depend>

    <test_depend>ament_cmake_gmock</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
