<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>mesh_map</name>
    <version>3.0.1</version>
    <description>The mesh_map package</description>
    
    <maintainer email="alexander.mock@naturerobots.com">Alexander Mock</maintainer>
    <maintainer email="jubraun@uos.de">Justus Braun</maintainer>
    <license>BSD 3-Clause</license>
    
    <author email="spuetz@uos.de">Sebastian Pütz</author>
    <author email="alexander.mock@naturerobots.com">Alexander Mock</author>
    <author email="jubraun@uos.de">Justus Braun</author>

    <depend>geometry_msgs</depend>
    <depend>mesh_msgs_conversions</depend> <!-- Note: mesh_msgs_conversions from mesh_tools is not packaged for humble, need to get it from source for now (mesh_tools repo) -->
    <depend>pluginlib</depend>
    <depend>rclcpp</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf2</depend>
    <depend>visualization_msgs</depend>
    <depend>std_srvs</depend>
    <depend>assimp</depend>

    <test_depend>ament_cmake_gtest</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
